# pattern8

./: .coverage  AGENTS_zh-CN.md  ARCHITECTURE_zh-CN.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
skills/prd/: SKILL.md
skills/prd/assets/: checklist.yaml  template.yaml
skills/prd/references/: guidelines.yaml  security.yaml
skills_zh/bug_fix/: SKILL.md
skills_zh/bug_fix/assets/: checklist.yaml  template.yaml
skills_zh/bug_fix/references/: guidelines.yaml  security.yaml
skills_zh/code_review/: SKILL.md
skills_zh/code_review/assets/: checklist.yaml  template.yaml
skills_zh/code_review/references/: guidelines.yaml  security.yaml
skills_zh/feature_dev/: SKILL.md
skills_zh/feature_dev/assets/: checklist.yaml  template.yaml
skills_zh/feature_dev/references/: guidelines.yaml  security.yaml
skills_zh/prd/: SKILL.md
skills_zh/prd/assets/: checklist.yaml  template.yaml
skills_zh/prd/references/: guidelines.yaml  security.yaml
skills_zh/refactor/: SKILL.md
skills_zh/refactor/assets/: checklist.yaml  template.yaml
skills_zh/refactor/references/: guidelines.yaml  security.yaml
src/p8/: __init__.py  cli.py
src/p8/enforcement/: mcp_server.py
tests/: test_enforcement.py  test_p8.py
